{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 27,
  "lineage": "dfb3d7af-8637-94a1-087f-be711e845c3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013ed6046abe69f0f",
            "arn": "arn:aws:ec2:eu-north-1:541718902922:instance/i-02a7cc5ce2a66e512",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a7cc5ce2a66e512",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d37b1014d0885208",
            "private_dns": "ip-10-0-1-45.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-16-16-182-189.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.182.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:541718902922:key/9e0f5e09-2d72-4102-8491-30d0bd6c3ec6",
                "tags": {
                  "Name": "pexilabs-root-volume"
                },
                "tags_all": {
                  "Name": "pexilabs-root-volume"
                },
                "throughput": 125,
                "volume_id": "vol-064a158cadd49a16f",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837d9b00c1bfcdbb",
            "tags": {
              "Name": "pexilabs-ec2-instance"
            },
            "tags_all": {
              "Name": "pexilabs-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065378faeee4782db"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:541718902922:internet-gateway/igw-0fc79a06935cfe2ba",
            "id": "igw-0fc79a06935cfe2ba",
            "owner_id": "541718902922",
            "tags": {
              "Name": "pexilabs-igw"
            },
            "tags_all": {
              "Name": "pexilabs-igw"
            },
            "vpc_id": "vpc-0ef67943272701573"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:541718902922:route-table/rtb-02da6b8d2dbdcb137",
            "id": "rtb-02da6b8d2dbdcb137",
            "owner_id": "541718902922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc79a06935cfe2ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pexilabs-public-route-table"
            },
            "tags_all": {
              "Name": "pexilabs-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef67943272701573"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e27dc05f886ba86f",
            "route_table_id": "rtb-02da6b8d2dbdcb137",
            "subnet_id": "subnet-0837d9b00c1bfcdbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:541718902922:security-group/sg-065378faeee4782db",
            "description": "Security group for PexiLabs EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065378faeee4782db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pexilabs-ec2-security-group",
            "name_prefix": "",
            "owner_id": "541718902922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pexilabs-ec2-security-group"
            },
            "tags_all": {
              "Name": "pexilabs-ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef67943272701573"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:541718902922:subnet/subnet-0837d9b00c1bfcdbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0837d9b00c1bfcdbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541718902922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pexilabs-public-subnet"
            },
            "tags_all": {
              "Name": "pexilabs-public-subnet"
            },
            "vpc_id": "vpc-0ef67943272701573"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:541718902922:vpc/vpc-0ef67943272701573",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-014f366a73b176722",
            "default_route_table_id": "rtb-03ade89db379617e6",
            "default_security_group_id": "sg-04bc3585f2d6bdc85",
            "dhcp_options_id": "dopt-071fa7eedb2fe88a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef67943272701573",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ade89db379617e6",
            "owner_id": "541718902922",
            "tags": {
              "Name": "pexilabs-vpc"
            },
            "tags_all": {
              "Name": "pexilabs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}